# ai-assistant-server

./: .gitignore  .windsurfrules  PLANNING.md  TASK.md  agent-searcher.py  agent_registry.py  agent_searcher.py  orchestrator.py  pyproject.toml  requirements.txt  server.py
agents/: _a2a_server_manager.py  brave_agent.py  database_agent_subagent.py  filesystem_agent.py  github_agent.py  mcp_manager.py  shared.py  subagents.py  supabase_a2a_server.py  supabase_agent.py  supabase_agent_executor.py
agents/supabase/: category_classifier.py  database_agent_plan.md  database_operations.py  response_models.py  supabase_client.py
aidocs/: pydanicai_agents.txt  pydanticai_dependencies.txt
database_agent/: agent.py  category_classifier.py  response_models.py  schema_inspector.py
ideas/: jrnl_shaman.md  notes_accelerator.md
models/: model_generator.py
